kubernetes/cray-hms-smd/templates/destinationrules.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cray-hms-smd-shared-kafkarule"
  labels:
    app.kubernetes.io/name: cray-hms-smd
spec:
  host: "cray-shared-kafka-kafka-bootstrap.services.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cray-smd-service"
  labels:
    app.kubernetes.io/name: cray-hms-smd
spec:
  host: "cray-smd"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
